--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,66 +1,74 @@
-body {
-	margin: 0;
-	padding: 0;
-	font-family: Arial, sans-serif;
-}
-
-header {
-	background-color: #336699;
-	color: white;
-	padding: 20px;
-}
-
-main {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	padding: 20px;
-}
-
-section {
-	flex-basis: 100%;
-	margin-bottom: 20px;
-}
-
-aside {
-	flex-basis: 25%;
-	margin-left: 20px;
-}
-
-form {
-	display: flex;
-	margin-bottom: 20px;
-}
-
-label {
-	flex-basis: 25%;
-	margin-right: 20px;
-}
-
-input[type="text"] {
-	flex-basis: 50%;
-	padding: 5px;
-}
-
-button {
-	padding: 5px 10px;
-	background-color: #336699;
-	color: white;
-	border: none;
-	cursor: pointer;
-}
-
-#current-icon img {
-	height: 100px;
-}
-
-ul {
-	list-style-type: none;
-	padding: 0;
-	margin: 0;
-}
-
-li {
-	margin-bottom: 5px;
-	cursor: pointer;
-}
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+  h1 {
+    text-align: center;
+    color: white;
+    background-color: rgb(41, 0, 128);
+    display: block;
+  }
+  
+  aside {
+    float: left;
+    width: 30%;
+  }
+  
+  form {
+    margin-bottom: 20px;
+  }
+  
+  input[type="text"] {
+    width: 100%;
+    padding: 5px;
+  }
+  
+  button {
+    padding: 5px 10px;
+    width: 106%;
+    background-color: rgb(87, 87, 224);
+  }
+  
+  hr {
+    border: none;
+    border-top: 1px solid #ccc;
+    margin-bottom: 20px;
+  }
+  
+  #searchHistory {
+    margin-bottom: 20px;
+  }
+  
+  #weatherSection {
+    margin-left: 35%;
+  }
+  
+  h2 {
+    margin-top: 20px;
+  }
+  
+  #forecast {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .forecast-item {
+    flex-basis: calc(100% / 5);
+    margin-bottom: 10px;
+    padding: 10px;
+    text-align: center;
+    border: 1px solid #ccc;
+  }
+  
+  .forecast-item img {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 5px;
+  }
+  
+  .forecast-item p {
+    margin: 5px 0;
+  }
+  
