--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,7 @@
 
   #searchHistory button {
     background-color: grey;
+    shape-margin: round;
   }
   
   #weatherSection {
@@ -59,11 +60,15 @@
   }
   
   .forecast-item {
+    width: calc(20% - 10px);
     flex-basis: calc(100% / 5);
-    margin-bottom: 10px;
+    margin-right: 10px;
     padding: 10px;
     text-align: center;
-    border: 1px solid #ccc;
+    border: 1px solid black;
+    background-color: rgb(44, 43, 55);
+    color: white;
+    box-sizing: border-box;
   }
   
   .forecast-item img {
@@ -75,4 +80,19 @@
   .forecast-item p {
     margin: 5px 0;
   }
+
+/* Media query for smaller screens */
+@media only screen and (max-width: 767px) {
+ 
+}
+  
+  /* Media query for medium screens */
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+   
+}
+  
+  /* Media query for larger screens */
+@media only screen and (min-width: 1024px) {
+ 
+}
   
